<resources>
    <string name="app_name">ActivityLifecycle</string>
    <string name="name_app">The Avengers</string>
    <string name="mobile_number">Enter Your Number</string>
    <string name="user_password">Enter your Password</string>
    <string name="txt_phone">Enter Phone Number:</string>
    <string name="txt_pass">Enter Password:</string>
    <string name="btn_login">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>