<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imgAvengersLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avenger_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAvengersLogo"
        android:text="@string/txt_phone"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="#dd33fa"
        android:textSize="20sp"
        android:layout_marginStart="10dp"/>
    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/mobile_number"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhone"
        android:layout_marginTop="30dp"
        android:text="@string/txt_pass"
        android:textColor="#dd33fa"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="10dp"/>
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPass"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/user_password"
        android:layout_marginHorizontal="20dp"/>
    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPass"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/my_colour"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="6dp"/>
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/register_yourself"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:padding="6dp"/>
</RelativeLayout>